# monorepo

./: .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml
.github/workflows/: ci.yml
.sandcastle/: .env.example  Dockerfile  main.mts
apps/bytesize/: package.json
apps/chessbro-backend/: .env.example  Dockerfile  package.json
apps/chessbro-frontend/: .env.example  index.html  package.json
apps/coffee/: astro.config.mjs  package.json
apps/mtg-backend/: Dockerfile  package.json  tsconfig.json
apps/mtg-backend-python/: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
apps/mtg-backend-python/alembic/: env.py
apps/mtg-backend-python/alembic/versions/: 1aaed4005f23_add_pack_table.py  7375ea55da57_adjust_scryfall_card_ids.py  75520981c9a1_add_relationships_to_card_table.py  98541ab27ee9_add_more_scryfall_card_columns.py  a1426a996800_create_scryfall_card_table.py  aff253e8bb3b_add_card_table.py
apps/mtg-backend-python/src/cards/: router.py  scryfall_bulk_data.py
apps/mtg-backend-python/src/database/: database.py
apps/mtg-backend-python/src/models/: __init__.py  card.py  pack.py  scryfall_card.py
apps/mtg-backend-python/src/notebook/: http.ipynb
apps/mtg-backend-python/src/packs/: router.py
apps/mtg-backend-python/src/server/: main.py
apps/nexus/: package.json
apps/portfolio/: package.json
apps/unboxed-backend/: .env.example  Dockerfile  drizzle.config.ts  package.json
apps/unboxed-frontend/: .env.example  eslint.config.mjs  index.html  package.json  vite.config.ts
(+89 files in other folders)
